# gads

./: .gitignore  pyproject.toml
src/gads/: __main__.py  aggregator.py  cli.py  engine.py
tests/: conftest.py  test_aggregator.py  test_engine.py
