[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gads"
version = "0.0.1"
description = "Git Author & Date Statistics TUI aggregator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["dulwich>=1.2.6"]

[project.scripts]
gads = "gads.cli:main" # This maps the 'gads' command to your main() function

[tool.hatch.build.targets.wheel]
packages = ["src/gads"]

[dependency-groups]
dev = ["pytest>=9.1.0", "ruff>=0.15.17", "taskipy>=1.14.1"]

[tool.ruff]
target-version = "py314"
line-length = 88

# Source directories to check
src = ["src"]

# Exclude non-Python workspaces and typical virtual environments
exclude = [
    ".git",
    ".uv",
    ".venv",
    "build",
    "dist",
    "engines/go",
    "engines/rust",
]

[tool.ruff.lint]
# Enable Pyflakes (F) and Error (E) codes by default (Flake8 equivalents)
select = ["E", "F", "I"] # "I" handles automatic import sorting (isort style)
ignore = []

[tool.ruff.format]
# Match Black's exact formatting defaults
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.taskipy.tasks]
# Run pytest across the workspace
test = "pytest"

# Check for code linting and sort imports automatically via ruff
lint = "ruff check . --fix"

# Format the workspace code files layout
format = "ruff format ."

# Run a combined quality gate (format, lint, then test)
check-all = "task format && task lint && task test"
