[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gads"
version = "0.0.1"
description = "Git Author & Date Statistics TUI aggregator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dulwich>=1.2.6",
    "typer>=0.26.7",
]

[project.scripts]
gads = "gads.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gads"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "taskipy>=1.14.1",
    "ty>=0.0.49",
]

# ==============================================================================
# Tool Configurations
# ==============================================================================

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]
exclude = [
    ".git",
    ".uv",
    ".venv",
    "build",
    "dist",
    "engines/go",
    "engines/rust",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["tests/*", "**/test_*.py"]

[tool.taskipy.tasks]
test = "pytest"
lint = "ruff check . --fix"
format = "ruff format ."
typecheck = "ty check ."
check-all = "task lint && task format && task typecheck && task test"
